--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <li><a href="./34-excel/index.html">Excel 表格</a></li>
   <li><a href="./41-timer-button/index.html">定时器按钮</a></li>
   <li><a href="./42-password-visual/index.html">密码可见组件</a></li>
+  <li><a href="./61-store-clicking/index.html">localstorage 状态保持</a></li>
+  <li><a href="./62-store-image/index.html">localstorage 保存图片</a></li>
+  <li><a href="./63-click-history/index.html">history 状态保持</a></li>
   <!-- 参考上一行代码，后续任务链接加到这里 -->
 </ul>
 </body>
